--- a/views/logged-in.html
+++ b/views/logged-in.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="shows-data row">
-        <div class="show col-md-4" ng-repeat="show in shows">
+    <div class="shows-data">
+        <div class="show col-md-3 col-xs-6" ng-repeat="show in shows">
             <div class="img-wrapper">
                 <img ng-src="{{show.Key.ShowImage}}" alt="{{show.Key.Name }}"/>
             </div>
