--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,12 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 body .container {
-  width: 940px;
   margin-bottom: 30px;
+}
+@media (min-width: 1200px) {
+  body .container .container {
+    width: 940px;
+  }
 }
 body .content {
   color: #000000;
@@ -57,6 +61,11 @@ body .all-shows img {
 body .all-shows .tiles .content {
   color: #000000;
   padding: 40px 70px;
+}
+@media (max-width: 640px) {
+  body .all-shows .tiles .content {
+    padding: 3px 15px;
+  }
 }
 body .all-shows .tiles .content .name {
   font-size: 20px;
@@ -132,7 +141,7 @@ body .login .login-wrapper {
 }
 body .my-shows img {
   width: 100%;
-  height: auto;
+  height: 400px;
 }
 @media (min-width: 940px) {
   body .my-shows img {
@@ -230,6 +239,11 @@ body .welcome .welcome-wrapper {
   margin-right: -50%;
   transform: translate(-50%, -50%);
 }
+@media (max-width: 700px) {
+  body .welcome .welcome-wrapper {
+    transform: inherit;
+  }
+}
 body .welcome .welcome-wrapper h1 {
   font-size: 55px;
 }
@@ -262,6 +276,12 @@ body .search-trakt-wrapper .results .result .image-wrapper img {
   width: 100%;
   height: auto;
 }
+body .search-trakt-wrapper .results .result .content-wrapper .description {
+  max-height: 220px;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 body .search-wrapper .results .result .image-wrapper img {
   width: 100%;
   height: auto;
@@ -271,7 +291,7 @@ body .search-wrapper .results .result .image-wrapper img {
 }
 .shows-data img {
   width: 100%;
-  height: auto;
+  height: 340px;
 }
 @media (min-width: 940px) {
   .shows-data img {
@@ -350,18 +370,19 @@ body.log-in .bg-wrapper {
 body.welcome {
   overflow: hidden;
 }
-.upcoming {
-  background: red;
-}
 .navbar {
   margin: 0;
 }
 .navbar .dropdown-toggle {
-  padding: 20px!important;
+  padding: 20px !important;
 }
 .navbar .search button {
   display: none;
 }
 .red {
   color: red;
+}
+.noresults {
+  color: #000000;
+  text-align: center;
 }
