--- a/views/register.html
+++ b/views/register.html
@@ -1,6 +1,6 @@
 
     <div class="container">
-        <div class="register-wrapper col-md-2 col-md-offset-5">
+        <div class="register-wrapper col-md-2 col-md-offset-5 col-xs-8">
             <h1>Register !</h1>
 
             <form class="register-form">
