--- a/views/log-in.html
+++ b/views/log-in.html
@@ -1,6 +1,6 @@
 <img class="log-in-bg" src="files/image/bb.jpg">
 <div class="container login">
-    <div class="login-wrapper col-md-2 col-md-offset-5 col-xs-8">
+    <div class="login-wrapper col-md-2 col-md-offset-5 col-xs-8 shadow-z-4">
         <h1>Log In !</h1>
 
         <form class="login-form">
