--- a/views/register.html
+++ b/views/register.html
@@ -1,8 +1,8 @@
+<img class="register-bg" src="files/image/flash1_blur.jpg">
 
-    <div class="container">
-        <div class="register-wrapper col-md-2 col-md-offset-5 col-xs-8">
+<div class="container ">
+        <div class="register-wrapper col-md-2 col-md-offset-5 col-xs-8 shadow-z-4">
             <h1>Register !</h1>
-
             <form class="register-form">
                 <div class="form-group">
                     <input type="text" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail"
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group">
                     <div class="submit">
-                        <button type="submit" class="btn btn-primary" ng-click="register(user)">Log in</button>
+                        <button type="submit" class="btn btn-primary" ng-click="register(user)">Register</button>
                     </div>
                 </div>
             </form>
