--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -10,7 +10,7 @@
             </label>
         </div>
     </div>
-    <div class="col-md-4 wrapper tile" ng-repeat="episode in episodes">
+    <div class="col-md-4 col-xs-6 wrapper tile" ng-repeat="episode in episodes">
         <div class="tile-wrapper {{episode.upcoming}}">
             <div class="image-wrapper">
                 <p class="name">{{episode.EpisodeNr}}x{{episode.SeasonNr}} <a href="#show/{{ show.ImdbID}}/{{ episode.SeasonNr }}/{{ episode.EpImdbId}}"> {{ episode.Name }}</a></p>
