--- a/css/less/style.less
+++ b/css/less/style.less
@@ -68,6 +68,17 @@ body {
       height: auto;
     }
     .tiles {
+      position: relative;
+      .remove {
+        position: absolute;
+        right: 110px;
+        top: 10px;
+        z-index: 100;
+        &:hover {
+          color: #f9431b;
+        }
+        color: rgba(85, 87, 87, 0.46);
+      }
       .content {
         color: #000000;
         @media (max-width: 640px) {
@@ -93,6 +104,13 @@ body {
           }
         }
       }
+      .heart {
+        i {
+          &:hover {
+            color: #ff0400;
+          }
+        }
+      }
     }
   }
   .show-wrapper {
@@ -102,6 +120,9 @@ body {
       .img-wrapper {
         img {
           width: 200px;
+          @media (max-width: 640px) {
+            width: 100%;
+          }
         }
       }
     }
@@ -138,6 +159,9 @@ body {
             }
           }
         }
+      }
+      .content {
+        margin-top: 20px;
       }
     }
   }
@@ -176,16 +200,15 @@ body {
       width: 100%;
       height: 400px;
       @media (min-width: 940px) {
-        height: 311px;
       }
-
 
     }
     .tile {
       background: none;
       .wrapper {
         background: #424242;
-        margin: 10px;
+        margin: 15px;
+        margin-top: 0;
         padding-bottom: 1px;
         .image-wrapper {
           position: relative;
@@ -270,6 +293,11 @@ body {
         }
       }
     }
+    .bottom-menu {
+      i {
+        right: 5px;
+      }
+    }
   }
   .welcome {
     text-align: center;
@@ -279,7 +307,6 @@ body {
       top: 38%;
       color: #FFFFFF;
       margin-right: -50%;
-      transform: translate(-50%, -50%);
       @media (max-width: 700px) {
         transform: inherit;
       }
@@ -426,7 +453,8 @@ body {
 
 body {
   .welcome-bg-wrapper,
-  .log-in-bg {
+  .log-in-bg,
+  .register-bg {
     height: 100%;
     width: 100%;
   }
@@ -438,7 +466,6 @@ body {
   &.register {
     overflow: hidden;
     .bg-wrapper {
-      background: url("../files/image/flash1_blur.jpg");
 
     }
   }
@@ -474,4 +501,15 @@ body {
 .noresults {
   color: #000000;
   text-align: center;
+}
+
+.show {
+  .content-body {
+    margin-left: 20px;
+  }
+  .bottom-menu {
+      i {
+        //right: 5px;
+      }
+  }
 }
