--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,19 @@ body .all-shows img {
   width: 100%;
   height: auto;
 }
+body .all-shows .tiles {
+  position: relative;
+}
+body .all-shows .tiles .remove {
+  position: absolute;
+  right: 110px;
+  top: 10px;
+  z-index: 100;
+  color: rgba(85, 87, 87, 0.46);
+}
+body .all-shows .tiles .remove:hover {
+  color: #f9431b;
+}
 body .all-shows .tiles .content {
   color: #000000;
   padding: 40px 70px;
@@ -82,11 +95,19 @@ body .all-shows .tiles .tile.show .content-wrapper {
   padding: 0 10px;
   width: 86%;
 }
+body .all-shows .tiles .heart i:hover {
+  color: #ff0400;
+}
 body .show-wrapper .show {
   margin-top: 20px;
 }
 body .show-wrapper .show .img-wrapper img {
   width: 200px;
+}
+@media (max-width: 640px) {
+  body .show-wrapper .show .img-wrapper img {
+    width: 100%;
+  }
 }
 body .show-wrapper .sm-btn-icon i {
   left: -5px;
@@ -113,6 +134,9 @@ body .show-wrapper .episodes-wrapper .tile .content-wrapper .checkbox-wrapper {
 body .show-wrapper .episodes-wrapper .tile .content-wrapper .checkbox-wrapper .checkbox {
   float: right;
   margin: 0;
+}
+body .show-wrapper .episodes-wrapper .content {
+  margin-top: 20px;
 }
 body .bottom-menu {
   position: fixed;
@@ -143,17 +167,13 @@ body .my-shows img {
   width: 100%;
   height: 400px;
 }
-@media (min-width: 940px) {
-  body .my-shows img {
-    height: 311px;
-  }
-}
 body .my-shows .tile {
   background: none;
 }
 body .my-shows .tile .wrapper {
   background: #424242;
-  margin: 10px;
+  margin: 15px;
+  margin-top: 0;
   padding-bottom: 1px;
 }
 body .my-shows .tile .wrapper .image-wrapper {
@@ -228,6 +248,9 @@ body .season-wrapper .tile .tile-wrapper .content-wrapper {
 body .season-wrapper .tile .tile-wrapper .checkbox {
   float: right;
 }
+body .season-wrapper .bottom-menu i {
+  right: 5px;
+}
 body .welcome {
   text-align: center;
 }
@@ -237,7 +260,6 @@ body .welcome .welcome-wrapper {
   top: 38%;
   color: #FFFFFF;
   margin-right: -50%;
-  transform: translate(-50%, -50%);
 }
 @media (max-width: 700px) {
   body .welcome .welcome-wrapper {
@@ -347,7 +369,8 @@ body .search-wrapper .results .result .image-wrapper img {
   width: 100%;
 }
 body .welcome-bg-wrapper,
-body .log-in-bg {
+body .log-in-bg,
+body .register-bg {
   height: 100%;
   width: 100%;
 }
@@ -357,9 +380,6 @@ body .bg-wrapper {
 }
 body.register {
   overflow: hidden;
-}
-body.register .bg-wrapper {
-  background: url("../files/image/flash1_blur.jpg");
 }
 body.log-in {
   overflow: hidden;
@@ -385,4 +405,7 @@ body.welcome {
 .noresults {
   color: #000000;
   text-align: center;
+}
+.show .content-body {
+  margin-left: 20px;
 }
