--- a/views/forms/editEpisode.html
+++ b/views/forms/editEpisode.html
@@ -22,7 +22,7 @@
         <div class="form-group row">
             <label for="episodeImdbId" class="col-md-3 control-label">Episode Imdb id</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="episode.EpImdbID" id="episodeImdbId" placeholder="Episode imdb id" disabled>
+                <input type="text" class="form-control" data-ng-model="episode.EpImdbId" id="episodeImdbId" placeholder="Episode imdb id" disabled>
             </div>
         </div>
         <div class="form-group row">
@@ -41,7 +41,7 @@
             <label for="season" class="col-md-3 control-label">Aired</label>
             <div class="col-md-8">
                 <p class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                    <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="episode.Date" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="open($event)"><i class="mdi-action-today"></i></button>
               </span>
@@ -60,6 +60,6 @@
                 <button class="btn btn-primary" ng-click="updateEpisode(episode, episode.EpisodeId)">Submit</button>
             </div>
         </div>
-        <input type="hidden" data-ng-model="show.ShowImdbId" value="{{}}" id="ShowID">
+        <input type="hidden" data-ng-model="episode.ShowImdbId" value="{{}}" id="ShowID">
     </div>
 </form>
