--- a/css/less/style.less
+++ b/css/less/style.less
@@ -112,6 +112,9 @@ body {
         }
       }
     }
+    .search {
+      margin-top: 10px;
+    }
   }
   .show-wrapper {
     .show {
@@ -124,6 +127,11 @@ body {
             width: 100%;
           }
         }
+      }
+
+      .heart {
+        float: left;
+        margin-right: 20px;
       }
     }
     .sm-btn-icon {
