--- a/views/allshows.html
+++ b/views/allshows.html
@@ -1,7 +1,8 @@
 <div class="all-shows container">
-    <div class="col-md-8 col-md-offset-4">
+    <div class="col-md-8 col-md-offset-4 search">
         <form class="navbar-form navbar-left">
-            <input ng-model="searchText" type="text" class="form-control col-lg-8" placeholder="Search">
+            <input ng-model="searchText" type="text" class="form-control floating-label" placeholder="Search">
+
         </form>
     </div>
 
