--- a/views/traktsearch.html
+++ b/views/traktsearch.html
@@ -26,7 +26,7 @@
 
                     </div>
                 </div>
-            </div>wel
+            </div>
             <p ng-hide="hide">Nothing here!</p>
         </div>
     </div>
