--- a/views/traktsearch.html
+++ b/views/traktsearch.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <p ng-hide="hide">Nothing here!</p>
+            <p ng-hide="hide" class="empty-result">Nothing here!</p>
         </div>
     </div>
 </div>
