--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1,6 +1,10 @@
 body {
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
+  .empty-result {
+    text-align: center;
+    margin-top: 20px;
+  }
   .container {
     @media (min-width: 1200px) {
       .container {
@@ -169,6 +173,17 @@ body {
         }
       }
       .content {
+        position: relative;
+        .remove {
+          position: absolute;
+          right: 110px;
+          top: 10px;
+          z-index: 100;
+          &:hover {
+            color: #f9431b;
+          }
+          color: rgba(85, 87, 87, 0.46);
+        }
         margin-top: 20px;
       }
     }
