--- a/views/myshows.html
+++ b/views/myshows.html
@@ -20,7 +20,7 @@
 
         </div>
     </div>
-    <div class="noresults col-md-2 col-md-offset-5" ng-hide="shows.length">
-        <p>Nothing here!</p>
+    <div class="noresults col-md-6 col-md-offset-3" ng-hide="shows.length">
+        <p>You have no tracked shows! Go to <a href="#shows">shows</a> to select your favorite show.</p>
     </div>
 </div>
