--- a/css/less/style.less
+++ b/css/less/style.less
@@ -123,7 +123,14 @@ body {
   .show-wrapper {
     .show {
       margin-top: 20px;
-
+      .remove {
+        float: right;
+        margin-right: 20px;
+        &:hover {
+          color: #f9431b;
+        }
+        color: rgba(85, 87, 87, 0.46);
+      }
       .img-wrapper {
         img {
           width: 200px;
@@ -252,6 +259,9 @@ body {
   }
 
   .register-wrapper {
+    h1 {
+      text-align: center;
+    }
     -webkit-filter: blur(0px) brightness(1);
     background: #FFFFFF;
     margin: 0;
@@ -265,7 +275,11 @@ body {
     .submit {
       margin-left: auto;
       margin-right: auto;
-      width: 100px;
+      width: 130px;
+    }
+
+    .reg-btn {
+
     }
   }
 
@@ -413,6 +427,11 @@ body {
     }
   }
 
+  .no-results {
+    text-align: center;
+    margin-top: 30px;
+  }
+
   .progress {
     height: 20px;
     margin-bottom: 5px;
@@ -447,15 +466,6 @@ body {
       width: 100%;
       height: auto;
     }
-  }
-}
-
-@-webkit-keyframes labels {
-  0% {
-    margin-top: 0px;
-  }
-  100% {
-    margin-top: -15px;
   }
 }
 
@@ -534,5 +544,75 @@ body {
       i {
         //right: 5px;
       }
+  }
+}
+
+
+@green: #008744;
+@blue: #0057e7;
+@red: #d62d20;
+@yellow: #ffa700;
+@white: #eee;
+
+@width: 100px;
+
+.loader {
+  position: absolute;
+  width: @width;
+  height: @width;
+  left: 50%;
+
+  top: 20%;
+}
+
+.circular{
+  animation: rotate 2s linear infinite;
+  height: @width;
+  position: relative;
+  width: @width;
+}
+
+
+.path {
+  stroke-dasharray: 1,200;
+  stroke-dashoffset: 0;
+  animation:
+  dash 1.5s ease-in-out infinite,
+  color 6s ease-in-out infinite
+;
+  stroke-linecap: round;
+}
+
+@keyframes rotate{
+  100%{
+    transform: rotate(360deg);
+  }
+}
+@keyframes dash{
+  0%{
+    stroke-dasharray: 1,200;
+    stroke-dashoffset: 0;
+  }
+  50%{
+    stroke-dasharray: 89,200;
+    stroke-dashoffset: -35;
+  }
+  100%{
+    stroke-dasharray: 89,200;
+    stroke-dashoffset: -124;
+  }
+}
+@keyframes color{
+  100%, 0%{
+    stroke: @red;
+  }
+  40%{
+    stroke: @blue;
+  }
+  66%{
+    stroke: @green;
+  }
+  80%, 90%{
+    stroke: @yellow;
   }
 }
