--- a/views/forms/editshow.html
+++ b/views/forms/editshow.html
@@ -1,6 +1,6 @@
 <form class="show-form container" >
     <div class="col-md-6">
-        <legend>Add/edit Shows</legend>
+        <legend>Edit Show</legend>
         <div class="form-group row">
             <label for="showName" class="col-md-3 control-label">Show name</label>
 
@@ -23,9 +23,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="showImage" class="col-md-3 control-label">Show Image</label>
+            <label for="showImage" class="col-md-3 control-label">Show Image url</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image url">
             </div>
         </div>
         <div class="form-group row">
