--- a/views/forms/show.html
+++ b/views/forms/show.html
@@ -1,7 +1,7 @@
 <form class="show-form container" >
     <div class="col-md-6">
 
-        <legend>Add/edit Shows</legend>
+        <legend>Add Shows</legend>
         <div class="form-group row">
             <label for="showName" class="col-md-3 control-label">Show name</label>
 
@@ -22,9 +22,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="showImage" class="col-md-3 control-label">Show Image</label>
+            <label for="showImage" class="col-md-3 control-label">Show Image url</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image" ng-required="true">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show Image url" ng-required="true">
             </div>
         </div>
         <div class="form-group row">
