--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,7 @@
             <h1>Register !</h1>
             <form class="register-form">
                 <div class="form-group">
-                    <input type="text" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail"
+                    <input type="email" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail"
                            placeholder="Email">
                 </div>
                 <div class="form-group">
@@ -16,7 +16,7 @@
                     <input type="password" class="form-control floating-label" data-ng-model="user.ConfirmPassword"
                            id="inputPasswordConfirm" placeholder="Confirm Password">
                 </div>
-                <div class="form-group">
+                <div class="form-group reg-btn">
                     <div class="submit">
                         <button type="submit" class="btn btn-primary" ng-click="register(user)">Register</button>
                     </div>
