--- a/views/forms/editEpisode.html
+++ b/views/forms/editEpisode.html
@@ -16,7 +16,7 @@
         <div class="form-group row">
             <label for="EpisodeImage" class="col-md-3 control-label">Episode image</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="episode.EpisodeImage" id="EpisodeImage" placeholder="Episode image">
+                <input type="text" class="form-control" data-ng-model="episode.EpisodeImage" id="EpisodeImage" placeholder="Episode image" data-hint="Image aspect rotatio should be 4/6">
             </div>
         </div>
         <div class="form-group row">
