--- a/views/register.html
+++ b/views/register.html
@@ -2,7 +2,7 @@
 
 <div class="container ">
         <div class="register-wrapper col-md-2 col-md-offset-5 col-xs-8 shadow-z-4">
-            <h1>Register !</h1>
+            <h1>Sign Up !</h1>
             <form class="register-form">
                 <div class="form-group">
                     <input type="email" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail"
@@ -21,6 +21,7 @@
                         <button type="submit" class="btn btn-primary" ng-click="register(user)">Register</button>
                     </div>
                 </div>
+                <p class="text-middle">Already have account? Log in <a href="#log-in">here</a></p>
             </form>
         </div>
 </div>
