--- a/views/welcome.html
+++ b/views/welcome.html
@@ -3,7 +3,7 @@
 <div class="container welcome">
     <div class="welcome-wrapper">
         <h1>Welcome to SimpleShow !</h1>
-        <p>Track you're favorite TV shows</p>
+        <p>Track your favorite TV shows</p>
         <a href="#register" class="btn btn-primary navbar-btn pull-left">Sign Up</a>
         <a href="#log-in" class="pull-left navbar-btn log-in">Log In</a>
     </div>
