--- a/views/allshows.html
+++ b/views/allshows.html
@@ -8,11 +8,11 @@
 
     <div class="list-element tiles col-md-12 col-xs-12" ng-repeat="show in tshows = (shows | listfilter:searchText)">
         <label class="remove">
-            <i class="mdi-action-highlight-remove" ng-click="removeShow(show.ImdbID)"></i>
+            <i class="mdi-action-highlight-remove" ng-click="removeShow(show.ImdbID)" tooltip="Remove Show"></i>
         </label>
         <div class="tile show col-md-3 col-xs-4">
-            <div class="image-wrapper">
-                <img ng-src="{{ show.ShowImage }}"/>
+            <div class="image-wrapper" ng-click="gotoShow(show.ImdbID)">
+                <img ng-src="{{ show.ShowImage }}" onerror="imgError(this);"/>
             </div>
             <div class="content-wrapper col-xs-8">
                 <p class="name"><a href="#show/{{ show.ImdbID }}">{{ show.Name }}</a></p>
@@ -20,7 +20,7 @@
             </div>
             <div class="checkbox heart">
                 <label ng-class="{red:isThisUserShow(show.ShowId)}">
-                    <i ng-class="isThisUserShow(show.ShowId) ? 'mdi-action-favorite': 'mdi-action-favorite-outline'" ng-click="showCheck(show.ShowId)"></i>
+                    <i ng-class="isThisUserShow(show.ShowId) ? 'mdi-action-favorite': 'mdi-action-favorite-outline'" ng-click="showCheck(show.ShowId)" tooltip="{{isThisUserShow(show.ShowId) ? 'Remove show from my shows': 'Add show to my shows'}}"></i>
                 </label>
             </div>
         </div>
