--- a/views/forms/editshow.html
+++ b/views/forms/editshow.html
@@ -25,7 +25,7 @@
         <div class="form-group row">
             <label for="showImage" class="col-md-3 control-label">Show Image url</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image url">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image url" data-hint="Image aspect rotatio should be 4/6">
             </div>
         </div>
         <div class="form-group row">
