--- a/views/forms/show.html
+++ b/views/forms/show.html
@@ -24,7 +24,7 @@
         <div class="form-group row">
             <label for="showImage" class="col-md-3 control-label">Show Image url</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show Image url" ng-required="true">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show Image url" ng-required="true" data-hint="Image aspect rotatio should be 4/6">
             </div>
         </div>
         <div class="form-group row">
