--- a/views/log-in.html
+++ b/views/log-in.html
@@ -15,6 +15,8 @@
                     <button type="submit" class="btn btn-primary" ng-click="logIn(user)">Log in</button>
                 </div>
             </div>
+            <p class="text-middle">Do not have account? Register <a href="#register">here</a></p>
+
         </form>
     </div>
 </div>
