--- a/css/less/style.less
+++ b/css/less/style.less
@@ -483,6 +483,7 @@ body {
     margin-top: 25px;
     position: relative;
     .episode {
+      cursor: pointer;
       padding-left: 0;
       .name {
         position: absolute;
